[VARIOS]Añadidas entidades y interfeces y factorias, y CursoService.

--- a/ws-app-model/src/main/resources/ConfigurationParameters.properties
+++ b/ws-app-model/src/main/resources/ConfigurationParameters.properties
@@ -1,8 +1,12 @@
 # -----------------------------------------------------------------------------
-# Services.
+# CursoServices.
 # -----------------------------------------------------------------------------
-
-
+CursoServiceFactory.className=es.udc.ws.app.model.cursoservice.CursoServiceImpl
 # -----------------------------------------------------------------------------
-# SqlDaos.
+# CursoSqlDaos.
 # -----------------------------------------------------------------------------
+SqlCursoDaoFactory.className=es.udc.ws.app.model.curso.Jdbc3CcSqlCursoDao
+# -----------------------------------------------------------------------------
+# InscripcionSqlDaos.
+# -----------------------------------------------------------------------------
+SqlInscripcionDaoFactory.className=es.udc.ws.app.model.inscripcion.Jdbc3CcSqlIncripcionDao
