[VARIOS]Capa cliente casi finalizada...probar

--- a/ws-app-client/src/main/resources/ConfigurationParameters.properties
+++ b/ws-app-client/src/main/resources/ConfigurationParameters.properties
@@ -1,5 +1,5 @@
-ClientMovieServiceFactory.className=es.udc.ws.movies.client.service.rest.RestClientMovieService
-#ClientMovieServiceFactory.className=es.udc.ws.movies.client.service.thrift.ThriftClientMovieService
+ClientCursoServiceFactory.className=es.udc.ws.app.client.service.rest.RestClientCursoService
+#ClientCursoServiceFactory.className=es.udc.ws.app.client.service.thrift.ThriftClientCursoService
 
-RestClientMovieService.endpointAddress=http://localhost:9090/ws-app-service/
-ThriftClientMovieService.endpointAddress=http://localhost:9090/ws-app-service/thrift/movieservice
+RestClientCursoService.endpointAddress=http://localhost:9090/ws-app-service/
+ThriftClientCursoService.endpointAddress=http://localhost:9090/ws-app-service/thrift/cursoservice
